--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,10 +19,10 @@ security:
             form_login:
                 login_path: app_login
                 check_path: app_login
+                default_target_path: app_home
                 enable_csrf: true
             logout:
                 path: app_logout
-                # where to redirect after logout
                 target: app_home
 
             # activate different ways to authenticate
